--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "solarized"]
-	path = solarized
+[submodule "vendor/solarized"]
+	path = vendor/solarized
 	url = https://github.com/altercation/solarized.git
